Chaning IMG path
Added "." before "/img" in source of files in both html and css

--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
             </div>
             <div class="familia__deck">
                 <div class="familia-card">
-                    <img src="/img/user_placeholder.png" alt="" class="familia-card__img">
+                    <img src="./img/user_placeholder.png" alt="" class="familia-card__img">
                     <h4 class="familia-card__heading">Amiczek</h4>
                     <h4 class="familia-card__heading">LIDER</h4>
                 </div>
                 <div class="familia-card">
-                    <img src="/img/user_placeholder.png" alt="" class="familia-card__img">
+                    <img src="./img/user_placeholder.png" alt="" class="familia-card__img">
                     <h4 class="familia-card__heading">Rexon*</h4>
                     <h4 class="familia-card__heading">LIDER</h4>
                 </div>
                 <div class="familia-card">
-                    <img src="/img/user_placeholder.png" alt="" class="familia-card__img">
+                    <img src="./img/user_placeholder.png" alt="" class="familia-card__img">
                     <h4 class="familia-card__heading">kukcio_</h4>
                     <h4 class="familia-card__heading">VICE-LIDER</h4>
                 </div>
                 <div class="familia-card">
-                    <img src="/img/user_placeholder.png" alt="" class="familia-card__img">
+                    <img src="./img/user_placeholder.png" alt="" class="familia-card__img">
                     <h4 class="familia-card__heading">LastoAkaRudy</h4>
                     <h4 class="familia-card__heading">VICE-LIDER</h4>
                 </div>
